--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -6,7 +6,7 @@
   {% for note in current_user.notes %}
   <li class="list-group-item">
     {{ note.data }}
-    <button type="button" class="close" onClick="deleteNote"({{ note.id }})>
+    <button type="button" class="close" onClick="deleteNote('{{ note.id }}')">
       <span aria-hidden="true">&times;</span>
     </button>
   </li>
